--- a/views/provider-signup.handlebars
+++ b/views/provider-signup.handlebars
@@ -13,9 +13,27 @@
             <input class="form-input" type="password" id="password-signup" />
         </div>
         <div class ="form-group">
-            <label for="provider-signup">Do you want to become a dog sitter / dog walker?</label>
-            <input class="form-input" type="text" id="provider-signup" />
+            <label for="location-signup">What city are you located in?</label>
+            <input class="form-input" type="text" id="location-signup" />
         </div>
+        <div class ="form-group">
+            <label for="dog-walking">Are you available for dog walking services? Walks are one hour minimum.</label>
+            <input class="form-input" type="checkbox" id="dogwalk-signup" />
+        </div>
+        <div>
+            <label for="dog-feeding">Are you available to feed dogs for clients? Services typically take 15-30 minutes, but you will have to enter client's homes while they are away.</label>
+            <input class="form-input" type="checkbox" id="dogfeeding-signup" />
+        </div>
+        <div>
+            <label for="STdogSitting">Are you available for short-term (less than 8 hours) dog sitting?</label>
+            <input class="form-input" type="checkbox" id="STdogSitting-signup" />
+        </div>
+           <div>
+            <label for="LTdogSitting">Are you available for long-term (muliple day) dog sitting?</label>
+            <input class="form-input" type="checkbox" id="LTdogSitting-signup" />
+        </div>
+
+
         <div class="form-group">
             <button class="btn btn-primary" type="submit">Signup</button>
         </div>
