--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -35,7 +35,7 @@
       </div>
       <div class ="form-group">
         <label for="provider-signup">Do you want to become a dog sitter / dog walker?</label>
-        <input class="form-input" type="text" id="provider-signup" />
+        <input class="form-input" type="checkbox" id="provider-signup" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">Signup</button>
