--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
+  <link rel="icon" type="image/svg" href="/images/collar.svg">
+  <title>The Collar Club</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>Business Name</h1>
+      <h1>The Collar Club</h1>
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
