--- a/views/provider-signup.handlebars
+++ b/views/provider-signup.handlebars
@@ -32,12 +32,15 @@
             <label for="LTdogSitting">Are you available for long-term (muliple day) dog sitting?</label>
             <input class="form-input" type="checkbox" id="LTdogSitting-signup" />
         </div>
-
+        <div>
+            <button id="upload_widget" class="cloudinary-button">Upload files</button>
+        </div>
 
         <div class="form-group">
             <button class="btn btn-primary" type="submit">Signup</button>
         </div>
     </form>
 </div>
-
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="/public/js/cloudinary.js" type="text/javascript"></script>
 <script src="./js/providerUpdate.js"></script>
