--- a/views/provider-signup.handlebars
+++ b/views/provider-signup.handlebars
@@ -42,5 +42,5 @@
     </form>
 </div>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-<script src="/public/js/cloudinary.js" type="text/javascript"></script>
-<script src="./js/providerUpdate.js"></script>
+<script src="./js/cloudinary.js" type="text/javascript"></script>
+{{!-- <script src="./js/providerUpdate.js"></script> --}}
