--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,10 +17,13 @@
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
+        <a href="/listings">listings</a> |
         <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
+        {{!-- {{else}}
+        FIXME: do we want a login
+         on nav bar when on login page? looks kinda tacky
+        <a href="/login">login</a> --}}
         {{/if}}
       </nav>
     </header>
