--- a/views/provider-signup.handlebars
+++ b/views/provider-signup.handlebars
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class="col-auto">
+    <h2>Create your Provider Profile</h2>
+  </div>
+</div>
 <div>
       <form class="form signup-form">
         <div class="form-group">
