--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -1,5 +1,5 @@
 {{!-- looping over the listings --}}
-{{#each listings as |listing| }}
+{{!-- {{#each listings as |listing| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>{{listing.name}}</h2>
@@ -7,4 +7,4 @@
   <div class="col-md-7">
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
