--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -32,6 +32,7 @@
       <div class="form-group">
         <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
+       <p>password must be at least 8 characters</p>
       </div>
       <div class ="form-group">
         <label for="provider-signup">Do you want to become a dog sitter / dog walker?</label>
