some working buttons

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
         FIXME: do we want a login
          on nav bar when on login page? looks kinda tacky
         <a href="/login">login</a> --}}
+        {{!-- {{else}}
+        <p>Please Login/Sign Up!</p> --}}
         {{/if}}
       </nav>
     </header>
