--- a/views/provider-update.handlebars
+++ b/views/provider-update.handlebars
@@ -29,6 +29,18 @@ but need provder info added to providerUpdate homeroute first --}}
         <label for="LTdogSitting">Are you available for long-term (muliple day) dog sitting?</label>
         <input class="form-input" type="checkbox" id="LTdogSitting-signup" />
     </div>
+    </div>
+            <label for="smallDog">Do you service small dogs?(0-35lbs)</label>
+            <input class="form-input" type="checkbox" id="smallDog-signup" />
+        </div>
+         </div>
+            <label for="medDog">Do you service medium dogs?(35-70lbs)</label>
+            <input class="form-input" type="checkbox" id="medDog-signup" />
+        </div>
+         </div>
+            <label for="largeDog">Do you service large dogs?(70+lbs)</label>
+            <input class="form-input" type="checkbox" id="largeDog-signup" />
+        </div>
     <div>
         <button id="upload_widget" class="cloudinary-button">Upload files</button>
     </div>
@@ -37,6 +49,6 @@ but need provder info added to providerUpdate homeroute first --}}
         <button class="btn btn-primary" type="submit">Save Changes</button>
     </div>
      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Remove Provider Status</button>
+        <button class="btn btn-primary" id="removeProvider" >Remove Provider Status</button>
     </div>
 </div>
