--- a/views/provider-update.handlebars
+++ b/views/provider-update.handlebars
@@ -13,6 +13,9 @@ but need provder info added to providerUpdate homeroute first --}}
         <label for="location-signup">What city are you located in?</label>
         <input class="form-input" type="text" id="location-signup" />
     </div>
+    <div>
+        <img src="" alt="" id="uploadedimage">
+    </div>
     <div class ="form-group">
         <label for="dog-walking">Are you available for dog walking services? Walks are one hour minimum.</label>
         <input class="form-input" type="checkbox" id="dogwalk-signup" />
@@ -52,3 +55,5 @@ but need provder info added to providerUpdate homeroute first --}}
         <button class="btn btn-primary" id="removeProvider" >Remove Provider Status</button>
     </div>
 </div>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="./js/cloudinary.js" type="text/javascript"></script>
