pictures not working

--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -1,3 +1,8 @@
+<head
+  <link rel="stylesheet" href="./public/css/style.css">
+</head>
+
+
 {{!-- looping over the listings --}}
 {{!-- {{#each listings as |listing| }}
 <div class="row mb-4 project">
