--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,8 @@
+<head
+  <link rel="stylesheet" href="/public/css/jass.css">
+  <link rel="stylesheet" href="/public/css/style.css">
+</head>
+<body>
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
@@ -17,6 +22,9 @@
 
     </form>
   </div>
+   <div >
+    <img src="/dogleashinmouth.jpg" class="img-fluid rounded" alt="Dog Leash Mouth" width="400px" height="600px">
+   </div>
   <div class="col-md-6">
     <h2>Signup</h2>
 
@@ -44,5 +52,6 @@
     </form>
   </div>
 </div>
+</body>
 
 <script src="./js/login.js"></script>
