--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <head
-  <link rel="stylesheet" href="/public/css/jass.css">
-  <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="stylesheet" href="./css/jass.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="row">
@@ -23,7 +23,7 @@
     </form>
   </div>
    <div >
-    <img src="/dogleashinmouth.jpg" class="img-fluid rounded" alt="Dog Leash Mouth" width="400px" height="600px">
+    <img src="./images/dogleashinmouth.jpg" class="img-fluid rounded" alt="Dog Leash Mouth" width="400px" height="600px">
    </div>
   <div class="col-md-6">
     <h2>Signup</h2>
