--- a/views/user-update.handlebars
+++ b/views/user-update.handlebars
@@ -26,7 +26,7 @@
         <label for="provider-signup">Do you want to become a dog sitter / dog walker?</label>
         <input class="form-input" type="checkbox" id="provider-signup" />
     </div>  --}}
-    <div class="form-group">
+    <div class="form-group info-update">
         <button class="btn btn-primary" type="submit">Save Changes</button>
     </div>
 </div>
