--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
-body {
-    background-image: '/images/dogsraincoats.jpg';
+.main-header {
+    background-image: './images/dogsraincoats.jpg';
     background-repeat: no-repeat;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
