--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -30,7 +30,7 @@
 
 
     <div class="col-md-6 profile-page">
-        <button class="btn btn-primary" id="updateProfile" providerCheck={{isProvider}} >Update Profile</button>
+        <button class="btn btn-primary" id="updateProfile" providerCheck="{{isProvider}}" >Update Profile</button>
     </div>
     
     
