--- a/views/provider-update.handlebars
+++ b/views/provider-update.handlebars
@@ -11,6 +11,7 @@ but need provder info added to providerUpdate homeroute first --}}
 <div class="form update-form">
     <div class ="form-group">
         <label for="location-signup">What city are you located in?</label>
+        {{!-- TODO: add value --}}
         <input class="form-input" type="text" id="location-signup" />
     </div>
     <div>
@@ -28,22 +29,22 @@ but need provder info added to providerUpdate homeroute first --}}
         <label for="STdogSitting">Are you available for short-term (less than 8 hours) dog sitting?</label>
         <input class="form-input" type="checkbox" id="STdogSitting-signup" />
     </div>
-        <div>
+    <div>
         <label for="LTdogSitting">Are you available for long-term (muliple day) dog sitting?</label>
         <input class="form-input" type="checkbox" id="LTdogSitting-signup" />
     </div>
-    </div class="form-group">
+    <div class="form-group">
             <label for="smallDog">Do you service small dogs?(0-35lbs)</label>
             <input class="form-input" type="checkbox" id="smallDog-signup" />
-        </div>
-         </div class="form-group">
+    </div>
+    <div class="form-group">
             <label for="medDog">Do you service medium dogs?(35-70lbs)</label>
             <input class="form-input" type="checkbox" id="medDog-signup" />
-        </div>
-         </div class="form-group">
+    </div>
+    <div class="form-group">
             <label for="largeDog">Do you service large dogs?(70+lbs)</label>
             <input class="form-input" type="checkbox" id="largeDog-signup" />
-        </div>
+    </div>
     <div class="form-group">
         <button id="upload_widget" class="cloudinary-button">Upload files</button>
     </div>
@@ -52,7 +53,8 @@ but need provder info added to providerUpdate homeroute first --}}
         <button class="btn btn-primary info-update" type="submit">Save Changes</button>
     </div>
      <div class="form-group">
-        <button class="btn btn-primary" id="removeProvider" >Remove Provider Status</button>
+        {{!-- TODO: check provider-id to pass to delete is correct --}}
+        <button class="btn btn-primary" id="removeProvider" provider-id="{{provider.id}}"  >Remove Provider Status</button>
     </div>
 </div>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
