--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -370,6 +370,7 @@ h5,
 h6 {
   margin: 0 0 0.5rem;
   line-height: 1.25;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 h1 {
