--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,11 +23,15 @@ header, .project:not(:last-child) {
   margin-left: -5px;
 }
 
-body {
+body{
   background-color: lightslategray;
 }
-.main-header {
-    background-image: './images/dogsraincoatscropped.jpg';
+.banner {
+    background-image: './images/dogsraincoatscropped2.jpg';
+    background-repeat: no-repeat;
+}
+ /* {
+    background-image: './images/dogsraincoats.jpg';
     background-repeat: no-repeat;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
+} */
