--- a/views/provider-update.handlebars
+++ b/views/provider-update.handlebars
@@ -1,3 +1,9 @@
+<head
+ <link rel="stylesheet" href="./css/jass.css">
+ <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+</head>
+
 {{!-- FIXME: should have user and provider info to update as this updates
 people that are both user-update updates people that are just users
 copy info from user-update --}}
@@ -50,11 +56,11 @@ but need provder info added to providerUpdate homeroute first --}}
     </div>
 
     <div class="form-group">
-        <button class="btn btn-primary info-update" type="submit">Save Changes</button>
+        <button class="btn btn-primary" id="save-changes" type="submit">Save Changes</button>
     </div>
      <div class="form-group">
         {{!-- TODO: check provider-id to pass to delete is correct --}}
-        <button class="btn btn-primary" id="removeProvider" provider-id="{{provider.id}}"  >Remove Provider Status</button>
+        <button class="btn btn-primary" id="removeProvider" provider-id="{{providerInfo.id}}"  >Remove Provider Status</button>
     </div>
 </div>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
