major changes, working listings route, page, no services

--- a/views/provider-signup.handlebars
+++ b/views/provider-signup.handlebars
@@ -13,7 +13,7 @@
         <div class="form-group">
             <label for="phone-signup">Phone number:</label>
             <input class="form-input" type="text" id="phone-signup" />
-            <p>Input Format xxx-xxx-xxxx</p>
+            <p>Input Format: xxx-xxx-xxxx</p>
         </div>
         <div class ="form-group">
             <label for="location-signup">What city do you provide services for?</label>
