--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -6,12 +6,13 @@
 
 
 {{!-- looping over the listings --}}
-{{!-- {{#each listings as |listing| }}
+{{#each listings as |listing| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
-    <h2>{{listing.name}}</h2>
+    <h2>{{listing.user.name}}</h2>
+    <p>city: {{listing.city}}</p>
   </div>
   <div class="col-md-7">
   </div>
 </div>
-{{/each}} --}}
+{{/each}}
