--- a/views/user-update.handlebars
+++ b/views/user-update.handlebars
@@ -9,11 +9,11 @@
 <div >
       <div class="form-group">
         <label for="name-signup">Name:</label>
-        <input class="form-input" type="text" id="name-signup" value={{name}} />
+        <input class="form-input" type="text" id="name-signup" value="{{name}}" />
     </div>
     <div class="form-group">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" value={{email}}/>
+        <input class="form-input" type="text" id="email-signup" value="{{email}}"/>
     </div>
     {{!-- <div class="form-group">
         <label for="password-signup">Password:</label>
