--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,4 @@
-<head
-  <link rel="stylesheet" href="./css/jass.css">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
+
 <body>
 <div class="row">
   <div class="col-md-6">
@@ -49,9 +46,9 @@
       </div>
     </form>
   </div>
-  <div >
+  {{!-- <div >
     <img src="./images/dogleashinmouth.jpg" class="img-fluid rounded" alt="Dog Leash Mouth" width="400px" height="400px">
-  </div>
+  </div> --}}
 
 </div>
 </body>
