--- a/views/provider-update.handlebars
+++ b/views/provider-update.handlebars
@@ -12,10 +12,18 @@ but need provder info added to providerUpdate homeroute first --}}
 </div>
 <div class="form update-form">
     <div class="form-group">
-            <label for="phone-signup">Phone number:</label>
-            <input class="form-input" type="text" id="phone-signup" value="{{providerInfo.phone}}"/>
-            <p>Input Format: xxx-xxx-xxxx</p>
-        </div>
+        <label for="name-signup">Name:</label>
+        <input class="form-input" type="text" id="name-signup" value="{{name}}" />
+    </div>
+    <div class="form-group">
+        <label for="email-signup">Email:</label>
+        <input class="form-input" type="text" id="email-signup" value="{{email}}"/>
+    </div>
+    <div class="form-group">
+        <label for="phone-signup">Phone number:</label>
+        <input class="form-input" type="text" id="phone-signup" value="{{providerInfo.phone}}"/>
+        <p>Input Format: xxx-xxx-xxxx</p>
+    </div>
     <div class ="form-group">
         <label for="location-signup">What city are you located in?</label>
         <input class="form-input" type="text" id="location-signup" value="{{providerInfo.city}}" />
