bug fixed the default profile picture loading

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,9 @@
     <p>Email: {{email}} </p>
   </div>
 </div>
-
+<div>
+  <img src={{profilePicture}} alt="Defualt Picture">
+</div>
 
 <div>
   {{#if isProvider}}
@@ -15,7 +17,7 @@
     <h3>Your Provider Info:</h3>
     <p>Phone: {{providerInfo.phone}}</p>
     <p>City: {{providerInfo.city}}</p> 
- 
+
 
      {{!-- 
     FIXME: need service from homeroutes
