added id to img

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,7 +7,7 @@
   </div>
 </div>
 <div>
-  <img src={{profilePicture}} alt="Defualt Picture">
+  <img src={{profilePicture}} alt="Defualt Picture" id="uploadedimage">
 </div>
 
 <div>
