--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -1,14 +1,38 @@
-
-
-
 {{!-- looping over the listings --}}
 {{#each listings as |listing| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>{{listing.user.name}}</h2>
-    <p>city: {{listing.city}}</p>
-  </div>
-  <div class="col-md-7">
+    <p>City: {{listing.city}}</p>
+    <p>Phone: {{listing.phone}}</p>
+
+    {{#if listing.dogWalk = true}}
+    <p>Dog Walks Available</p>
+    {{/if}}
+
+    {{#if lisitng.dogFeed = true}}
+    <p>Dog Feeding Available</p>
+    {{/if}}
+
+    {{#if listing.sTDogSit = true}}
+    <p>Short-Term Dog Sitting Available</p>
+    {{/if}}
+    
+    {{#if listing.lTDogSit = true}}
+    <p>Long-Term Dog Sitting Available</p>
+    {{/if}}
+
+    {{#if listing.small = true}}
+    <p>Works with small dogs (40 pounds and under).</p>
+    {{/if}}
+
+    {{#if listing.medium = true}}
+    <p>Works with medium dogs (40 pounds to 80 pound).</p>
+    {{/if}}
+
+    {{#if listing.large = true}}
+    <p>Works with large dogs (80 pounds and larger).</p>
+    {{/if}}
   </div>
 </div>
 {{/each}}
