--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,6 +2,9 @@
 
 <div class="row">
   <div class="col-auto">
+     <div>
+        <img src={{profilePicture}} alt="" id="uploadedimage">
+    </div>
     <h2>Welcome, {{name}}!</h2>
     <p>Email: {{email}} </p>
   </div>
