--- a/views/provider-signup.handlebars
+++ b/views/provider-signup.handlebars
@@ -28,7 +28,7 @@
             <input class="form-input" type="checkbox" id="STdogSitting-signup" />
         </div>
         <div>
-            <label for="LTdogSitting">Are you available for long-term (muliple day) dog sitting?</label>
+            <label for="LTdogSitting">Are you available for long-term (multiple day) dog sitting?</label>
             <input class="form-input" type="checkbox" id="LTdogSitting-signup" />
         </div>
         <div>
@@ -44,13 +44,17 @@
             <input class="form-input" type="checkbox" id="largeDog-signup" />
         </div>
         <div>
-            <button id="upload_widget" class="cloudinary-button">Upload files</button>
+            <button id="upload_widget" class="cloudinary-button">Upload Photo</button>
         </div>
 
         <div class="form-group">
             <button class="btn btn-primary" id="sign-up" type="submit">Signup</button>
         </div>
     </form>
+    
+</div>
+ <div>
+        <img src={{profilePicture}} alt="" id="uploadedimage">
 </div>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 <script src="./js/cloudinary.js" type="text/javascript"></script>
