--- a/views/provider-update.handlebars
+++ b/views/provider-update.handlebars
@@ -28,9 +28,7 @@ but need provder info added to providerUpdate homeroute first --}}
         <label for="location-signup">What city are you located in?</label>
         <input class="form-input" type="text" id="location-signup" value="{{providerInfo.city}}" />
     </div>
-    <div>
-        <img src="" alt="" id="uploadedimage">
-    </div>
+
     <div class ="form-group">
         <label for="dog-walking">Are you available for dog walking services? Walks are one hour minimum.</label>
         <input class="form-input" type="checkbox" id="dogwalk-signup" />
@@ -60,7 +58,7 @@ but need provder info added to providerUpdate homeroute first --}}
         <input class="form-input" type="checkbox" id="largeDog-signup"  />
     </div>
     <div class="form-group">
-        <button id="upload_widget" class="cloudinary-button">Upload files</button>
+        <button id="upload_widget" class="cloudinary-button">Upload Photo</button>
     </div>
 
     <div class="form-group">
@@ -68,6 +66,9 @@ but need provder info added to providerUpdate homeroute first --}}
     </div>
      <div class="form-group">
         <button class="btn btn-primary" id="removeProvider" provider-id="{{providerInfo.id}}"  >Remove Provider Status</button>
+    </div>
+     <div>
+        <img src={{profilePicture}} alt="" id="uploadedimage">
     </div>
 </div>
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
