--- a/views/user-update.handlebars
+++ b/views/user-update.handlebars
@@ -15,10 +15,17 @@
     <input class="form-input" type="password" id="password-signup" />
     <p>password must be at least 8 characters</p>
   </div> --}}
-   
+  <div>
+        <img src={{profilePicture}} alt="" id="uploadedimage">
+    </div>
+   <div class="form-group">
+        <button id="upload_widget" class="cloudinary-button">Upload Photo</button>
+    </div>
   <div class="form-group ">
     <button class="btn btn-primary" id="save-changes" type="submit">Save Changes</button>
   </div>
 </div>
 
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="./js/cloudinary.js" type="text/javascript"></script>
 <script src="./js/userUpdate.js"></script>
