fixed listings handlebar

--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -6,31 +6,31 @@
     <p>City: {{listing.city}}</p>
     <p>Phone: {{listing.phone}}</p>
 
-    {{#if listing.dogWalk = true}}
+    {{#if listing.dogWalk}}
     <p>Dog Walks Available</p>
     {{/if}}
 
-    {{#if lisitng.dogFeed = true}}
+    {{#if lisitng.dogFeed}}
     <p>Dog Feeding Available</p>
     {{/if}}
 
-    {{#if listing.sTDogSit = true}}
+    {{#if listing.sTDogSit}}
     <p>Short-Term Dog Sitting Available</p>
     {{/if}}
     
-    {{#if listing.lTDogSit = true}}
+    {{#if listing.lTDogSit}}
     <p>Long-Term Dog Sitting Available</p>
     {{/if}}
 
-    {{#if listing.small = true}}
+    {{#if listing.small}}
     <p>Works with small dogs (40 pounds and under).</p>
     {{/if}}
 
-    {{#if listing.medium = true}}
+    {{#if listing.medium}}
     <p>Works with medium dogs (40 pounds to 80 pound).</p>
     {{/if}}
 
-    {{#if listing.large = true}}
+    {{#if listing.large}}
     <p>Works with large dogs (80 pounds and larger).</p>
     {{/if}}
   </div>
