--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -3,8 +3,9 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>{{listing.user.name}}</h2>
-    <p>City: {{listing.city}}</p>
+    <p>Service City: {{listing.city}}</p>
     <p>Phone: {{listing.phone}}</p>
+    <p>Email: {{listing.user.email}}</p>
 
     {{#if listing.dogWalk}}
     <p>Dog Walks Available</p>
